--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node --esm bot.ts"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +13,10 @@
     "base64-js": "^1.5.1",
     "express": "^4.18.2",
     "json-bigint": "^1.0.0",
+    "near-api-js": "^2.1.4",
     "telegraf": "^4.15.3"
+  },
+  "devDependencies": {
+    "typescript": "^5.4.0-dev.20231208"
   }
 }
